--- a/src/template.html
+++ b/src/template.html
@@ -18,8 +18,9 @@
       padding: 0;
       box-sizing: border-box;
     }
-    body {
+    html, body {
       font-family: 'Poppins', sans-serif;
+      font-size: 14px;
     }
 
   </style>
